fixed: reload font style for hero__title & hero__text; add wrap in media.sass

--- a/css/style.css
+++ b/css/style.css
@@ -372,13 +372,14 @@ img {
   .section-title__heading {
     font-family: 'Yeseva One', cursive;
     text-transform: uppercase;
-    font-size: 1.42rem;
+    font-size: 1.43rem;
+    font-weight: 400;
     padding-top: 3rem; }
   .section-title__image {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 5rem; }
+    margin-bottom: 2.3rem; }
     .section-title__image::before, .section-title__image::after {
       content: '';
       width: 2.28rem;
@@ -542,41 +543,39 @@ img {
   position: relative;
   width: 84%;
   margin: 0 auto;
-  margin-top: -9.5rem;
+  margin-top: -9.07rem;
   background: #fff;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03); }
 
 .card__title {
   color: #363636;
-  font-family: Yeseva One, cursive;
-  font-style: normal;
-  font-weight: lighter;
-  font-size: 1.28rem;
+  font-family: 'Yeseva One', cursive;
+  font-weight: 400;
+  font-size: 1.29rem;
   line-height: 1.78rem;
-  padding: 1.75rem 0 0.57rem 2.42rem;
+  padding: 1.75rem 0 0.5rem 2.42rem;
   margin: 0; }
 
 .card__list {
+  font-family: 'Futura Book', sans-serif;
+  font-size: 1.071rem;
+  letter-spacing: 0.5px;
+  font-weight: 400;
+  line-height: 1.75rem;
   margin: 0;
   padding: 0 0 4rem 3.5rem; }
 
 .card__item {
   color: #959595;
-  font-family: Futura Book;
-  letter-spacing: 0.5px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 1.07;
-  line-height: 1.75rem; }
+  padding-bottom: 0.12rem; }
 
 .card__sticker {
   position: absolute;
   left: 0;
-  bottom: -2.4rem;
-  font-family: Yeseva One, cursive;
-  font-weight: lighter;
-  font-size: 1.28rem;
-  text-align: center;
+  bottom: -1.7rem;
+  font-family: 'Yeseva One', cursive;
+  font-weight: 100;
+  font-size: 1.286rem;
   text-transform: uppercase;
   color: #fff;
   background-color: #E3B873;
@@ -644,17 +643,55 @@ img {
   .nav__item {
     margin-right: 1rem; } }
 
-@media screen and (max-width: 996px) {
+@media screen and (max-width: 992px) {
   .nav {
     display: none; }
   .row {
     display: flex;
-    flex-direction: column;
-    align-items: center; } }
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap; }
+    .row .col {
+      flex-basis: 48%;
+      margin-right: 0.5rem; }
+      .row .col .card__text {
+        position: relative;
+        width: 91%;
+        padding-left: 1.2rem;
+        margin: 0;
+        margin-top: -9.07rem; }
+      .row .col .card__title {
+        font-size: 1.5rem;
+        padding-bottom: 1rem; }
+      .row .col .card__list {
+        font-size: 1.25rem;
+        margin-bottom: 3rem; } }
 
 @media screen and (max-width: 930px) {
   .hero__instagram {
     display: none; } }
+
+@media screen and (max-width: 912px) {
+  .row .col .card__title {
+    font-size: 1.37rem; }
+  .row .col .card__list {
+    font-size: 1.2rem; } }
+
+@media screen and (max-width: 776px) {
+  .row .col .card__title {
+    font-size: 1.07rem; }
+  .row .col .card__list {
+    font-size: 1.02rem; } }
+
+@media screen and (max-width: 662px) {
+  .row {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .row .col .card__title {
+      font-size: 1.37rem; }
+    .row .col .card__list {
+      font-size: 1.2rem; } }
 
 @media screen and (max-width: 576px) {
   .hero__contant {
@@ -697,16 +734,3 @@ img {
     padding: 0 0 4rem 2.5rem; }
   .card__sticker {
     padding: 1.21rem 2rem; } }
-
-@media screen and (max-width: 996px) {
-  .types__card {
-    margin-bottom: 9rem; }
-  .card__title {
-    font-size: 1.07rem;
-    padding: 1.75rem 0 0.57rem 2.42rem; }
-  .card__list {
-    padding: 0 0 4rem 3.5rem; }
-  .card__item {
-    font-size: 0.92rem; }
-  .card__text {
-    margin-left: 0; } }
