--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,17 +4,61 @@
   .nav  
     &__item
       margin-right: 1rem
-@media screen and ( max-width: 996px )
+@media screen and ( max-width: 992px )
   .nav
     display: none  
   .row
     display: flex
-    flex-direction: column
-    align-items: center
+    justify-content: space-between
+    align-items: flex-start
+    flex-wrap: wrap
+    .col
+      flex-basis: 48%
+      margin-right: 0.5rem 
+      .card
+        &__text
+          position: relative
+          width: 91%
+          padding-left: 1.2rem
+          margin: 0
+          margin-top: -9.07rem
+        &__title
+          font-size: 1.5rem
+          padding-bottom: 1rem 
+        &__list
+          font-size: 1.25rem
+          margin-bottom: 3rem
 @media screen and ( max-width: 930px )
   .hero
     &__instagram
       display: none
+@media screen and ( max-width: 912px )
+  .row
+    .col
+      .card
+        &__title
+          font-size: 1.37rem
+        &__list
+          font-size: 1.2rem
+@media screen and ( max-width: 776px )
+  .row
+    .col
+      .card
+        &__title
+          font-size: 1.07rem
+        &__list
+          font-size: 1.02rem
+@media screen and ( max-width: 662px )
+  .row
+    display: flex
+    flex-direction: column
+    align-items: center 
+    .col
+      .card
+        &__title
+          font-size: 1.37rem
+        &__list
+          font-size: 1.2rem
 @media screen and ( max-width: 576px )
   .hero
     &__contant
@@ -58,17 +102,3 @@
       padding: 0 0 4rem 2.5rem
     &__sticker
       padding: 1.21rem 2rem
-@media screen and ( max-width: 996px )
-  .types
-    &__card
-      margin-bottom: 9rem
-  .card
-    &__title
-      font-size: 1.07rem
-      padding: 1.75rem 0 0.57rem 2.42rem
-    &__list
-      padding: 0 0 4rem 3.5rem
-    &__item
-      font-size: 0.92rem
-    &__text
-      margin-left: 0
