--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -16,13 +16,14 @@ img
     &__heading
       font-family: 'Yeseva One', cursive
       text-transform: uppercase
-      font-size: 1.42rem
+      font-size: 1.43rem
+      font-weight: 400
       padding-top: 3rem
     &__image
       display: flex
       justify-content: center
       align-items: center
-      margin-bottom: 5rem
+      margin-bottom: 2.3rem
       &::before, &::after
         content: ''
         width: 2.28rem
