--- a/sass/templetes/_types.sass
+++ b/sass/templetes/_types.sass
@@ -9,39 +9,37 @@
     position: relative
     width: 84%
     margin: 0 auto
-    margin-top: -9.5rem
+    margin-top: -9.07rem
     background: $light
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
   &__title
     color: $gray
-    font-family: Yeseva One, cursive;
-    font-style: normal;
-    font-weight: lighter;
-    font-size: 1.28rem
+    font-family: 'Yeseva One', cursive;
+    font-weight: 400
+    font-size: 1.29rem
     line-height: 1.78rem
-    padding: 1.75rem 0 0.57rem 2.42rem
+    padding: 1.75rem 0 0.5rem 2.42rem
     margin: 0
   &__list
+    font-family: 'Futura Book', sans-serif
+    font-size: 1.071rem
+    letter-spacing: 0.5px
+    font-weight: 400
+    line-height: 1.75rem
     margin: 0
     padding: 0 0 4rem 3.5rem
   &__item
     color: $light-gray
-    font-family: Futura Book;
-    letter-spacing: 0.5px
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.07
-    line-height: 1.75rem
+    padding-bottom: 0.12rem
   &__sticker
     position: absolute
     left: 0
-    bottom: -2.4rem
-    font-family: Yeseva One, cursive;
-    font-weight: lighter
-    font-size: 1.28rem
-    text-align: center
+    bottom: -1.7rem
+    font-family: 'Yeseva One', cursive;
+    font-weight: 100
+    font-size: 1.286rem
     text-transform: uppercase
     color: $light
     background-color: $primary
-    box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+    box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3)
     padding: 1.21rem 3rem
